Many new features

--- a/Duo Log Analyzer/App.config
+++ b/Duo Log Analyzer/App.config
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="Duo_Log_Analyzer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
     <userSettings>
         <Duo_Log_Analyzer.Properties.Settings>
@@ -23,7 +23,7 @@
                 <value />
             </setting>
             <setting name="IgnoreIPList" serializeAs="String">
-                <value>0.0.0.0|</value>
+                <value />
             </setting>
             <setting name="DUOIKey" serializeAs="String">
                 <value />
@@ -46,7 +46,7 @@
             <setting name="UserInBypassMode" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="OutsideUS" serializeAs="String">
+            <setting name="OutsideCountryEnabled" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="UnenrolledUser" serializeAs="String">
@@ -58,6 +58,38 @@
             <setting name="UnenrolledUserRegExExpression" serializeAs="String">
                 <value />
             </setting>
+            <setting name="iCloudPrivateRelayEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="iCloudPrivateRelayIgnore" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ICloudPrivateRelayLastUpdate" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GeoAlertsEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="GeoAlertsDistance" serializeAs="String">
+                <value>300</value>
+            </setting>
+            <setting name="GeoAlertsLat" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="GeoAlertsLong" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="OutsideCountryCode" serializeAs="String">
+                <value />
+            </setting>
         </Duo_Log_Analyzer.Properties.Settings>
     </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
