--- a/Duo Log Analyzer/App.config
+++ b/Duo Log Analyzer/App.config
@@ -82,6 +82,27 @@
             <setting name="OutsideCountryCode" serializeAs="String">
                 <value />
             </setting>
+            <setting name="UnenrolledARN" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UnenrolledAlertsOnlySendToUnenrolledARN" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AppVersion" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ProgramErrorSNSTopic" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GeolocationioAPIKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GeoLocationIoCheck" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="GeoLocationIoCheckOverrideAlert" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Duo_Log_Analyzer.Properties.Settings>
     </userSettings>
   <runtime>
