--- a/Duo Log Analyzer/Duo Log Analyzer.csproj
+++ b/Duo Log Analyzer/Duo Log Analyzer.csproj
@@ -60,6 +60,9 @@
     <Reference Include="AWSSDK.SimpleNotificationService, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
       <HintPath>..\packages\AWSSDK.SimpleNotificationService.3.7.101.6\lib\net45\AWSSDK.SimpleNotificationService.dll</HintPath>
     </Reference>
+    <Reference Include="BouncyCastle.OpenPgp, Version=2.0.0.1, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
+      <HintPath>..\packages\BouncyCastle.OpenPGP.2.0.0.1\lib\net461\BouncyCastle.OpenPgp.dll</HintPath>
+    </Reference>
     <Reference Include="CsvHelper, Version=30.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
       <HintPath>..\packages\CsvHelper.30.0.1\lib\net47\CsvHelper.dll</HintPath>
     </Reference>
@@ -105,6 +108,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AWS.cs" />
+    <Compile Include="Ipgeolocationio.cs" />
     <Compile Include="Duo.cs" />
     <Compile Include="FormSetup.cs">
       <SubType>Form</SubType>
@@ -112,6 +117,9 @@
     <Compile Include="FormSetup.Designer.cs">
       <DependentUpon>FormSetup.cs</DependentUpon>
     </Compile>
+    <Compile Include="GPG.cs" />
+    <Compile Include="iCloudPrivateRelay.cs" />
+    <Compile Include="IpWhoisIo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
