--- a/Duo Log Analyzer/packages.config
+++ b/Duo Log Analyzer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AWSSDK.Core" version="3.7.104.5" targetFramework="net472" />
   <package id="AWSSDK.SimpleNotificationService" version="3.7.101.6" targetFramework="net472" />
+  <package id="BouncyCastle.OpenPGP" version="2.0.0.1" targetFramework="net48" />
   <package id="CsvHelper" version="30.0.1" targetFramework="net48" />
   <package id="IPNetwork2" version="2.6.548" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net48" />
