--- a/Duo Log Analyzer/App.config
+++ b/Duo Log Analyzer/App.config
@@ -103,6 +103,15 @@
             <setting name="GeoLocationIoCheckOverrideAlert" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="FailedLogonEventMonitoringEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="FailedLogonEventTime" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="UserMarkedFraudEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Duo_Log_Analyzer.Properties.Settings>
     </userSettings>
   <runtime>
