--- a/Duo Log Analyzer/Properties/Settings.settings
+++ b/Duo Log Analyzer/Properties/Settings.settings
@@ -95,5 +95,14 @@
     <Setting Name="GeoLocationIoCheckOverrideAlert" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="FailedLogonEventMonitoringEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="FailedLogonEventTime" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
+    <Setting Name="UserMarkedFraudEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
